0.55 - fixed a sql translation bug related to exists clauses
	added deployment projects for windows
	tweaked make.batch install target to install 32-bit files under
		C:\Program Files (x86)

0.54 - fixed bugs that caused problems when unopened result sets were closed
	added protocol identification phase to client/server protocol
	split client protocol handling out into its own class and abstracted it
	updated oracle code not to relogin when dropping tables unless a
		temp table with an "on commit preserve rows" was run
	updated server to run table-drop and session-end queries after the
		session-end commit/rollback, as some queries on some platforms (
		ncluding drop-table on oracle) cause an implicit commit and
		the rollback needs to be run first
	replaced gettimeofday calls with calls to datetime::getSystemDateAndTime
	fixed a bug in slow query logger that caused it to display the wrong
		query time
	a few mingw32 tweaks
	fixed a few PDO driver bugs related to affected row counts and
		last insert id
	implemented PDO exceptions
	implemented support for PDO::ATTR_EMULATE_PREPARES by using
		substitution variables
	added foundrows and ignorespace options to mysql connect string
	fixed a bug where affectedRows() would return -1 for MySQL selects
		instead of the same value as rowCount()
	updated sqlr-connection code not to get db host name and ip address
		at startup unless logging is enabled to work around issues
		where people fail to put the db host name in dns
	fixed a subtle bind format translation bug that caused errors when
		translating from oracle-style binds to mysql-style if the
		varaibles were out of order with the placeholders in the query
	fixed bugs in the mysql and postgresql connection code that assumed
		that the bind variables were bound in order, independent of
		their names
	resolved a paradox involved in detecting whether the current mysql
		query needs to have its bind variables faked or not
	added support for client-side debug-to-file